--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Бот для повторения слов добавленных в https://learnew.ru/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon ./src/test.js",
     "dev": "nodemon ./src/main.js"
   },
   "repository": {
